# bpc-mam-esp-projekt

./: .gitignore  sdkconfig  sdkconfig.default  sdkconfig.old  sdkconfig_bak
main/: 3_ntp.c  3_ntp.h  CMakeLists.txt  Kconfig.projbuild  blink_example_main.c
main/10_wave_gen/: 10_wave_gen.c  10_wave_gen.h
main/1_blink/: 1_blink.c  1_blink.h
main/2_wifi/: 2_wifi.c  2_wifi.h
main/3_ntp/: 3_ntp.c  3_ntp.h
main/4_per_change/: 4_per_change.c  4_per_change.h  blinkPeriod.c  blinkPeriod.h
main/5_unixtime/: uart_commandHandler.c  uart_commandHandler.h  unixtime.c  unixtime.h
main/6_rng/: 6_rng.c  6_rng.h
main/7_mac/: 7_mac.c  7_mac.h
main/9_temp/: 9_temp.c  9_temp.h
